pytorch on mnist dataset

--- a/pytorch-linear-regression.ipynb
+++ b/pytorch-linear-regression.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/sgiri/Desktop/pytorch tutorial/pytorch-linear-regression.ipynb Cell 1'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sgiri/Desktop/pytorch%20tutorial/pytorch-linear-regression.ipynb#ch0000000?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sgiri/Desktop/pytorch%20tutorial/pytorch-linear-regression.ipynb#ch0000000?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n"
@@ -24,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,9 +41,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 73.,  67.,  43.],\n",
+      "        [ 91.,  88.,  64.],\n",
+      "        [ 87., 134.,  58.],\n",
+      "        [102.,  43.,  37.],\n",
+      "        [ 69.,  96.,  70.]])\n",
+      "tensor([[ 56.,  70.],\n",
+      "        [ 81., 101.],\n",
+      "        [119., 133.],\n",
+      "        [ 22.,  37.],\n",
+      "        [103., 119.]])\n"
+     ]
+    }
+   ],
    "source": [
     "# Convert inputs and targets to tensors\n",
     "inputs = torch.from_numpy(inputs)\n",
@@ -66,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,9 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 1.7426,  2.3574,  0.5301],\n",
+      "        [ 0.3513, -0.4058,  1.3611]], requires_grad=True)\n",
+      "tensor([-0.1261,  0.6217], requires_grad=True)\n"
+     ]
+    }
+   ],
    "source": [
     "print(w)\n",
     "print(b)"
@@ -86,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[307.8259,  57.6004],\n",
+      "        [399.8307,  83.9835],\n",
+      "        [498.1223,  55.7448],\n",
+      "        [298.6022,  69.3602],\n",
+      "        [383.5335,  81.1756]], grad_fn=<AddBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "preds = model(inputs)\n",
     "print(preds)"
@@ -106,9 +133,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 56.,  70.],\n",
+      "        [ 81., 101.],\n",
+      "        [119., 133.],\n",
+      "        [ 22.,  37.],\n",
+      "        [103., 119.]])\n"
+     ]
+    }
+   ],
    "source": [
     "# Compare with targets\n",
     "print(targets)"
@@ -116,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,9 +167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(47290.0391, grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "loss = mse(preds, targets)\n",
     "print(loss)"
@@ -138,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,9 +195,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 1.7426,  2.3574,  0.5301],\n",
+      "        [ 0.3513, -0.4058,  1.3611]], requires_grad=True)\n",
+      "tensor([[25590.1523, 26911.3867, 16618.8789],\n",
+      "        [-1696.8036, -2984.0149, -1510.6842]])\n"
+     ]
+    }
+   ],
    "source": [
     "# Gradients for weights\n",
     "print(w)\n",
@@ -159,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,9 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(47290.0391, grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's verify that the loss is actually lower\n",
     "loss = mse(preds, targets)\n",
@@ -181,9 +247,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0., 0., 0.],\n",
+      "        [0., 0., 0.]])\n",
+      "tensor([0., 0.])\n"
+     ]
+    }
+   ],
    "source": [
     "w.grad.zero_()\n",
     "b.grad.zero_()\n",
@@ -193,9 +269,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[263.9653,  61.4882],\n",
+      "        [342.2226,  89.1206],\n",
+      "        [430.1556,  62.0960],\n",
+      "        [254.7764,  72.9332],\n",
+      "        [328.4051,  86.2687]], grad_fn=<AddBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate predictions\n",
     "preds = model(inputs)\n",
@@ -204,9 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(32090.0371, grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the loss\n",
     "loss = mse(preds, targets)\n",
@@ -215,9 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[21063.8828, 22052.8789, 13619.7734],\n",
+      "        [-1292.8607, -2542.7769, -1240.0760]])\n",
+      "tensor([247.7050, -17.6186])\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute gradients\n",
     "loss.backward()\n",
@@ -227,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,9 +347,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 1.2761,  1.8678,  0.2277],\n",
+      "        [ 0.3812, -0.3505,  1.3886]], requires_grad=True)\n",
+      "tensor([-0.1315,  0.6221], requires_grad=True)\n"
+     ]
+    }
+   ],
    "source": [
     "print(w)\n",
     "print(b)\n"
@@ -251,9 +367,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(21844.4785, grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate loss\n",
     "preds = model(inputs)\n",
@@ -263,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,9 +405,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1.3148, grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate loss\n",
     "preds = model(inputs)\n",
@@ -293,18 +425,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 57.2316,  70.3567],\n",
+       "        [ 81.4635, 101.0672],\n",
+       "        [120.2764, 131.9807],\n",
+       "        [ 21.5270,  36.7332],\n",
+       "        [100.3391, 120.1141]], grad_fn=<AddBackward0>)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "preds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 56.,  70.],\n",
+       "        [ 81., 101.],\n",
+       "        [119., 133.],\n",
+       "        [ 22.,  37.],\n",
+       "        [103., 119.]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "targets"
    ]
