added image classification

--- a/image-classification-pytorch.ipynb
+++ b/image-classification-pytorch.ipynb
@@ -137,6 +137,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torchvision.transforms as transforms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MNIST dataset (images and labels)\n",
+    "dataset = MNIST(root='data/', \n",
+    "                train=True,\n",
+    "                transform=transforms.ToTensor())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 28, 28]) 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "img_tensor, label = dataset[0]\n",
+    "print(img_tensor.shape, label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch.utils.data.dataset.Subset at 0x14e7ba880>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from torch.utils.data import random_split\n",
+    "\n",
+    "train_ds, val_ds = random_split(dataset, [50000, 10000])\n",
+    "\n",
+    "train_ds\n",
+    "val_ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "batch_size = 128\n",
+    "\n",
+    "train_loader = DataLoader(train_ds, batch_size, shuffle=True)\n",
+    "val_loader = DataLoader(val_ds, batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch.utils.data.dataloader.DataLoader at 0x14e7a4d90>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
